--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body>    
     <h1>Boa Tarde!</h1>
+    <p>Hoje estamos revendo git github e PR "git flow"</p>
 </body>
 </html>
